--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "proptypes": "^1.1.0",
     "react": "^16.4.0",
     "react-dnd": "^4.0.4",
     "react-dnd-html5-backend": "^4.0.4",
